Fix refresh behavior in chrome://webrtc-logs

Before this CL, refreshing had no effect; the page tab would
have to be closed and reopened for the list to actually be
refreshed. This CL fixes the issue.

Piggy-backed on this CL is also a fix of a problem where
base::Unretained was used instead of a WeakPtr.

Bug: 826206
Change-Id: I49e6f5bb7e62487d71a0816a7faaf8538fb04363
Reviewed-on: https://chromium-review.googlesource.com/1028070
Reviewed-by: Henrik Grunell <grunell@chromium.org>
Commit-Queue: Elad Alon <eladalon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554352}
Former-commit-id: 5714379d9bfebb6753d407ac1fb0d33f8b3dddf0